--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,13 @@
 @import "bento.css";
 @import "legado.css";
 
+@font-face {
+    font-family: 'Mondwest';
+    src: url('../fonts/PPMondwest-Regular.woff2') format('woff2'),
+         url('../fonts/PPMondwest-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: italic;
+}
 
 @font-face {
   font-family: 'Tiny'; /* Fuente de Google Fonts */
@@ -44,8 +51,8 @@
     --gray-details:#666666;
 
     --main-font:'Crimson-Regular',sans-serif;
-    --main-italic:'Tiny',sans-serif;
-    --pixel-font:'Mondwest', serif;
+    --main-italic:'Crimson-Italic',sans-serif;
+    --pixel-font:'Mondwest','Tiny' serif;
     --bold-font:'Crimson-SemiBold',sans-serif;
 }
 
