--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 @import "legado.css"; 
 @font-face {
     font-family: 'Mondwest';
-    src: url('/fonts/PPMondwest-Regular.woff2') format('woff2');
+    src: url('../fonts/PPMondwest-Regular.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
     font-display: block;
