--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,11 @@
 }
 
 @font-face {
-    font-family: 'Crimson-Italic';
-    src: url('../fonts/CrimsonText-Italic.woff2') format('woff2'),
-         url('../fonts/CrimsonText-Italic.woff') format('woff');
-    font-weight: 400;
-    font-style: italic;
+font-family: 'Crimson-Italic';
+src: url('../fonts/CrimsonText-Italic.woff2') format('woff2'),
+url('../fonts/CrimsonText-Italic.woff') format('woff');
+font-weight: 400;
+font-style: normal;
 }
 
 @font-face {
