--- a/css/cientificos.css
+++ b/css/cientificos.css
@@ -1,7 +1,7 @@
 /*SCIENTISTS CARDS */
 
 .scientists-section {
-    min-height: 100vh;
+    height: 100vh;
     background-color: var(--blue-details);
     position: relative;
     padding: 2rem;
@@ -84,7 +84,7 @@
 .scientist-card {
     position: absolute;
     left: 50%;
-    top: 50%;
+    top: 55%;
     aspect-ratio: 3/4;
     width: 10vw;
     background-color: var(--secondary-color);
@@ -308,7 +308,7 @@
 }
 
 
-/* Media queries para ajustar tamaño de cards en responsive */
+/* MEDIA QUERIES */
 
 @media (max-width: 1220px) {
    
@@ -321,7 +321,34 @@
     }
 
 }
+@media (max-height: 768px) {
+    .scientists-grid {
+        top: 65%;
+    }
 
+    .scientist-card {
+        width: 10vw;
+        top: 60%;
+    }
+
+    .central-text {
+        padding: 1rem;
+    }
+
+    .central-text .texto-grande {
+        margin-bottom: 0.5rem;
+    }
+
+    .indicaciones-wrapper {
+        margin-top: 0.5rem;
+    }
+
+    .wheel-indicator {
+        width: 150px;
+        height: 150px;
+        top: 60%;
+    }
+}
 @media (max-width: 768px) {
 
     .scientists-grid{
@@ -351,7 +378,8 @@
 
     .scientists-grid{
         width: 100%;
-        height: 100%;
+        height:400px;
+        bottom:-140px !important; 
     }
     .scientist-card {
         width: 25vw;
@@ -365,6 +393,7 @@
 
     .central-text {
         width: 100%;
+        padding: 0.25rem;
         .texto-grande{
             margin-bottom: 1rem;
         }
