--- a/css/intro.css
+++ b/css/intro.css
@@ -22,7 +22,7 @@ header {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(71, 123, 158, 0.25);
+    background-color: rgba(71, 123, 158, 0.35);
     mix-blend-mode: multiply;
     z-index: 1;
     will-change: background-color;
@@ -40,9 +40,9 @@ header {
 }
 
 .subtitular {
-    font-family: var(--main-font);
-    font-size: clamp(24px, 2vw, 26px);
-    line-height: 1.15em;
+    font-family: var(--bold-font);
+    font-size: clamp(26px, 2vw, 26px);
+    line-height: 1.1em;
 }
 
 .linea-separadora {
@@ -50,7 +50,7 @@ header {
     height: 3px;
     background-color: var(--red-details);
     border: none;
-    margin: 0.75rem auto 1.5rem auto;
+    margin: 0.75rem auto 1rem auto;
 }
 
 .sequence-container {
@@ -88,6 +88,7 @@ header {
     width: 60%;
     padding: 0 2rem;
     color: var(--secondary-color);
+    width: 50%;
 }
 
 
@@ -119,7 +120,7 @@ header {
 }
 
 .quote-container .autor-cita-pequeña{
-    margin-top: 2rem;
+    margin-top: 1rem;
 }
 
 
@@ -409,6 +410,7 @@ header {
     }
 }
 
+
 /* Para pantallas aún más pequeñas */
 @media (max-width: 768px) {
 
@@ -517,10 +519,13 @@ header {
             width: 60%;
         }
         .texto-pequeño{
-            font-size: 12px;
+            font-size: 14px;
         }
     }
     
+    .quote-container .autor-cita-pequeña{
+        margin-top: 1rem;
+    }
     
 }
 
