--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ font-style: normal;
     font-display: block;
 }
 
+
 :root{
     --main-color:#000000;
     --secondary-color:#f3efdd;
@@ -445,7 +446,11 @@ strong{
     .texto-pequeño{
         font-size: 14px;
     }
-
+    
+    .texto-cita-pequeña{
+        font-size: 22px;
+        line-height: 1.2em;
+    }
     .menu-items {
         display: flex;
         flex-wrap: wrap;
@@ -491,6 +496,21 @@ strong{
             font-size:15px;
         }
     }
+    .texto-cita-pequeña{
+        font-size: 18px;
+        line-height: 1em;
+    }
+    .modal-img{
+        width:100px;
+        height:140px;
+    }
+    .modal-navigation{
+        gap:0.5rem;
+        justify-content: space-around;
+    }
+    .nav-next, .next-name{
+        text-align: right;
+    }
     .texto-pequeño{
         font-size:14px;
     }
@@ -503,7 +523,13 @@ strong{
         padding: 0.5rem 1rem;
     }
 
-   
+    h4{
+        font-size: 16px;
+        line-height: 1em;
+        span{
+            font-size: 14px;
+        }
+    }
 }
 
 
