--- a/css/intro.css
+++ b/css/intro.css
@@ -519,7 +519,10 @@ header {
             width: 60%;
         }
         .texto-pequeño{
-            font-size: 14px;
+            font-size: 16px;
+        }
+	.icon-wrapper img {
+            width: 20vw;
         }
     }
     
