--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,8 @@ h1 {
     span {
         font-size: clamp(58px, 5.9vw, 78px);
         color: var(--red-details);
-	padding-left: 0.1em;
+        letter-spacing: 0.025em;
+        padding-left: 0.1em;
     }
 }
 
