--- a/css/style.css
+++ b/css/style.css
@@ -478,6 +478,9 @@ strong{
 
         span{
             font-size: clamp(48px, 4.9vw, 58px);
+		
+        letter-spacing: 0;
+        padding-left: 0;
         }
     }
     h2{
