--- a/css/bento.css
+++ b/css/bento.css
@@ -315,6 +315,7 @@
 .texto-tachado {
     position: relative;
     display: inline-block;
+    transform: rotateY(0deg);
 }
 .tachado {
     position: absolute;
@@ -324,6 +325,7 @@
     width: 50px;
     height: auto;
     z-index: 1;
+    backface-visibility: hidden;
 }
 
 .tachado img {
